--- a/pages/10425.html
+++ b/pages/10425.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5288/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -323,10 +321,10 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_0a9906cc8159eecbd72a0103141f257658f9dafb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_5989355a861c4fce3f3c020e064e3adfa5e8e1ad_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -640,7 +638,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -957,9 +955,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p><em>Geometric type theory</em> refers to the <a class='existingWikiWord' href='/nlab/show/extensional+type+theory'>extensional</a> <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent</a> <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a> refinement of <a class='existingWikiWord' href='/nlab/show/geometric+theory'>geometric logic</a>, hence to the type theory given under the <a class='existingWikiWord' href='/nlab/show/relation+between+type+theory+and+category+theory'>relation between category theory and type theory</a> by <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>sheaf toposes</a>, at least in far as it is preserved by <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a>.</p>
+<p><em>Geometric type theory</em> is a conjectural extension of <a class='existingWikiWord' href='/nlab/show/geometric+theory'>geometric logic</a> to an <a class='existingWikiWord' href='/nlab/show/extensional+type+theory'>extensional</a> <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent</a> <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>. That is, it is supposed to be a dependent type theory which under the <a class='existingWikiWord' href='/nlab/show/relation+between+type+theory+and+category+theory'>relation between category theory and type theory</a> corresponds to <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>sheaf toposes</a>, and is preserved by <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a>.</p>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/type'>types</a> in geometric type theory are hence <em>geometric types</em>, with <a class='existingWikiWord' href='/nlab/show/semantics'>semantics</a> given by <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaves</a>. This is pretty close to common language usage once one generalizes to <em><a class='existingWikiWord' href='/nlab/show/geometric+homotopy+type+theory'>geometric homotopy types</a></em>.</p>
+<p>At present it is not clear exactly how such a type theory should be defined.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -990,19 +988,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  3, 2013 04:55:42 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.106.128)
+  <p>
+  Last revised on April 17, 2018 at 11:25:32.
+  See the <a href="https://ncatlab.org/nlab/history/geometric type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+type+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/geometric+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/geometric+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+type+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/geometric+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/geometric+type+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/geometric+type+theory" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/geometric+type+theory" id="view_source" rel="nofollow">Source</a>
