--- a/pages/16974.html
+++ b/pages/16974.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +310,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/special+orthogonal+group'>special orthogonal group</a> <math class='maruku-mathml' display='inline' id='mathml_23ba0ab9d8222fcb01d5694e4646f9ea22e2429b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(d)</annotation></semantics></math>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/special+orthogonal+group'>special orthogonal group</a> <math class='maruku-mathml' display='inline' id='mathml_74f40f683251937fcd101a24ff3c4b1b58803845_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(d)</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -322,7 +320,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/translation+group'>translation</a>, <a class='existingWikiWord' href='/nlab/show/boost'>boost</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/translation+group'>translation</a>, <a class='existingWikiWord' href='/nlab/show/reflection'>reflection</a>, <a class='existingWikiWord' href='/nlab/show/boost'>boost</a></p>
 </li>
 </ul>
 
@@ -331,19 +329,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 14, 2016 11:45:01 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (81.92.17.137)
+  <p>
+  Last revised on April 17, 2018 at 11:07:29.
+  See the <a href="https://ncatlab.org/nlab/history/rotation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/rotation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/rotation/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/rotation" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/rotation" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/rotation" id="view_source" rel="nofollow">Source</a>
