--- a/pages/17864.html
+++ b/pages/17864.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +306,17 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The elements in the <a class='existingWikiWord' href='/nlab/show/Lorentz+group'>Lorentz group</a> <math class='maruku-mathml' display='inline' id='mathml_276a8f25b2fbafb05491bdc49030c3ce89b333ef_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>O</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>O(d-1,1)</annotation></semantics></math> in the image of the <a class='existingWikiWord' href='/nlab/show/special+orthogonal+group'>special orthogonal group</a> <math class='maruku-mathml' display='inline' id='mathml_276a8f25b2fbafb05491bdc49030c3ce89b333ef_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>↪</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(d-1) \hookrightarrow O(d-1,1)</annotation></semantics></math> are <em><a class='existingWikiWord' href='/nlab/show/rotation'>rotations</a></em> in space. The further elements in the special Lorentz group <math class='maruku-mathml' display='inline' id='mathml_276a8f25b2fbafb05491bdc49030c3ce89b333ef_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(d-1,1)</annotation></semantics></math>, which mathematically are “hyperbolic rotations” in a space-time plane, are called <em>boosts</em> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>.</p>
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The elements in the <a class='existingWikiWord' href='/nlab/show/Lorentz+group'>Lorentz group</a> <math class='maruku-mathml' display='inline' id='mathml_bca76e07585f6d84992a7016046a61bfe4d46772_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>O</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>O(d-1,1)</annotation></semantics></math> in the image of the <a class='existingWikiWord' href='/nlab/show/special+orthogonal+group'>special orthogonal group</a> <math class='maruku-mathml' display='inline' id='mathml_bca76e07585f6d84992a7016046a61bfe4d46772_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>↪</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(d-1) \hookrightarrow O(d-1,1)</annotation></semantics></math> are <em><a class='existingWikiWord' href='/nlab/show/rotation'>rotations</a></em> in space. The further elements in the special Lorentz group <math class='maruku-mathml' display='inline' id='mathml_bca76e07585f6d84992a7016046a61bfe4d46772_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mi>d</mi><mo>−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(d-1,1)</annotation></semantics></math>, which mathematically are “hyperbolic rotations” in a space-time plane, are called <em>boosts</em> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/translation+group'>translation</a>, <a class='existingWikiWord' href='/nlab/show/reflection'>reflection</a>, <a class='existingWikiWord' href='/nlab/show/rotation'>rotation</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -325,19 +333,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 29, 2017 10:39:25 
-  by <a class="existingWikiWord" href="/nlab/show/Daniel+Luckhardt">Daniel Luckhardt</a>
-  (134.76.82.216)
+  <p>
+  Last revised on April 17, 2018 at 11:22:45.
+  See the <a href="https://ncatlab.org/nlab/history/boost" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/boost" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boost/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/boost" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boost" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/boost" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boost/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/boost" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boost" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/boost" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/boost" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/boost" id="view_source" rel="nofollow">Source</a>
