--- a/pages/17865.html
+++ b/pages/17865.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8453/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,40 +306,41 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li>
-<p>In <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>: see <em><a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a></em></p>
-</li>
+    <blockquote>
+<p>This entry is about the concept in <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>/<a class='existingWikiWord' href='/nlab/show/physics'>physics</a>/<a class='existingWikiWord' href='/nlab/show/linear+algebra'>linear algebra</a>. For the concept in <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> see <em><a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a></em></p>
+</blockquote>
+<hr/>
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a><ul><li><a href='#related_concepts'>Related concepts</a></li></ul></li></ul></div>
+<h2 id='idea'>Idea</h2>
 
-<li>
-<p>in <a class='existingWikiWord' href='/nlab/show/linear+algebra'>linear algebra</a>/<a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>: see ….</p>
-</li>
+<p>Given a <span class='newWikiWord'>hyperplane<a href='/nlab/new/hyperplane'>?</a></span> in a <a class='existingWikiWord' href='/nlab/show/Euclidean+space'>Euclidean space</a>, then <em>reflection</em> at that hyperplane is the operation that sends each point to its mirror image at that hyperplane, the result of translating the point in the <a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction</a> <span class='newWikiWord'>perpendicular<a href='/nlab/new/perpendicular'>?</a></span> to the hyperplane by twice its <a class='existingWikiWord' href='/nlab/show/metric+space'>distance</a> to the hyperplane.</p>
 
-<li>
-<p>in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>: see …</p>
-</li>
+<h3 id='related_concepts'>Related concepts</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/rotation'>rotation</a>, <a class='existingWikiWord' href='/nlab/show/translation+group'>translation</a>, <a class='existingWikiWord' href='/nlab/show/boost'>boost</a></li>
 </ul>
 
 <p>
 </p>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/disambiguation'>disambiguation</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on December 14, 2016 12:03:32 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (81.92.17.137)
+  <p>
+  Last revised on April 17, 2018 at 11:57:13.
+  See the <a href="https://ncatlab.org/nlab/history/reflection" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/reflection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/reflection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflection/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/reflection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/reflection" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/reflection" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/reflection" id="view_source" rel="nofollow">Source</a>
